<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_patient_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_patient_list" />
        <item
            android:id="@+id/nav_user_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_nurse_list" />

        <item
            android:id="@+id/nav_transaction_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_transaction_list" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>
</menu>