<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/blue"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:text="@string/verify_user"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="5dp"
               android:layout_height="wrap_content">
               <TextView
                   android:text="@string/patient_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#FFFFFF" />
               <TextView
                   android:id="@+id/edittext_dialogverifyface_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#FFFFFF"
                   android:hint="@string/enter_id"/>
               <TextView
                   android:id="@+id/patient_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"/>
           </LinearLayout>


        <TextView
            android:id="@+id/last_consumption_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <ProgressBar
            android:id="@+id/progressbar_dialogverifyface_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_dialogverifyface_check"
            app:layout_constraintEnd_toStartOf="@+id/button_dialogverifyface_check"
            app:layout_constraintTop_toTopOf="@+id/button_dialogverifyface_check" />

        <TextView
            android:id="@+id/textview_dialogverifyface_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/status" />

        <Button
            android:id="@+id/button_dialogverifyface_verify"

            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/capsule"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_dialogverifyface_check" />


    </LinearLayout>

</androidx.cardview.widget.CardView>